@@ -1,6 +1,6 @@
 ########################################################################
-# $Id: protocol.py,v 1.17 2002/12/05 04:13:59 smulloni Exp $
-# Time-stamp: <02/12/04 16:12:30 smulloni>
+# $Id: protocol.py,v 1.18 2003/03/11 23:07:37 smulloni Exp $
+# Time-stamp: <03/03/11 17:39:05 smulloni>
 #  
 #  Copyright (C) 2001 Andrew T. Csillag <drew_csillag@geocities.com>
 #  
@@ -372,144 +372,3 @@ def _cleanupConfig(requestData, sessionDict):
         Configuration.scope({constants.UNIXPATH : sessionDict[constants.UNIXPATH]})
     #Configuration.saveMash()
 
-########################################################################
-# $Log: protocol.py,v $
-# Revision 1.17  2002/12/05 04:13:59  smulloni
-# fixing argsextract and its use in web.
-#
-# Revision 1.16  2002/11/13 21:27:49  smulloni
-# incremental formlib modifications.
-#
-# Revision 1.15  2002/09/30 20:02:27  smulloni
-# support for scoping based on SERVER_PORT.
-#
-# Revision 1.14  2002/05/09 18:51:55  drew_csillag
-# Server: header juggling
-#
-# Revision 1.13  2002/05/03 21:09:44  smulloni
-# fix for dealing with exotic content-types in the request
-#
-# Revision 1.12  2002/05/03 15:53:10  smulloni
-# fix to deal with cgi.py's little problems; made the merging of querystring into post data optional.
-#
-# Revision 1.11  2002/05/02 16:29:07  drew_csillag
-# made it so that:
-#
-# 	1) empty form arguments are passed through.  Previously, they were
-# 	   dropped, but it generally wasn't a problem since you usually
-# 	   used <:args:> or CONN.args.get(foo), but occasionally it was
-# 	   confusing.
-#
-# 	2) on a POST request, we now also gather what would usually be GET
-# 	   arguments also (say your form action is /foo/bar.html?baz=fred
-# 	   and it was a POST, you'll now get the baz argument (set to
-# 	   fred, of course))
-#
-# Revision 1.10  2002/04/02 22:27:47  smulloni
-# fixed HTTPConnection.extract_args() bug.
-#
-# Revision 1.9  2002/02/24 15:50:21  smulloni
-# adding product wizard
-#
-# Revision 1.8  2002/02/14 06:13:14  smulloni
-# slight tweak -- don't apply converters to default values in extract_args
-#
-# Revision 1.7  2002/02/14 06:02:11  smulloni
-# added extract_args method to CONNECTION object.
-#
-# Revision 1.6  2002/02/14 02:58:25  smulloni
-# moved hooks into a pylib; added some logging to templating handler, and minor fix
-# to web service.
-#
-# Revision 1.5  2001/10/02 02:35:34  smulloni
-# support for scoping on unix socket path; very serious scope bug fixed.
-#
-# Revision 1.4  2001/09/21 20:16:31  drew_csillag
-# added userdir service (and subsidiary changes to other services) and multi-line ability for <:call:> tag
-#
-# Revision 1.3  2001/09/04 19:12:57  smulloni
-# integrated scopeable package into SkunkWeb.
-#
-# Revision 1.2  2001/08/28 11:38:47  drew_csillag
-# now uses normheader
-#
-# Revision 1.1.1.1  2001/08/05 14:59:58  drew_csillag
-# take 2 of import
-#
-#
-# Revision 1.7  2001/07/09 20:38:40  drew
-# added licence comments
-#
-# Revision 1.6  2001/05/04 20:04:40  smullyan
-# fix: sessionHandler needed to use SkunkWeb.constants;
-# fix: web.protocol (which no longer has a protocol in it, oy!) now
-# cleans up a little more carefully and no longer deletes the connection
-# object from sessionDict (I may recycle it)
-#
-# Revision 1.5  2001/05/04 18:38:52  smullyan
-# architectural overhaul, possibly a reductio ad absurdum of the current
-# config overlay technique.
-#
-# Revision 1.4  2001/05/03 17:26:12  smullyan
-# added an IP pseudo-directive to SkunkWeb.ConfigAdditives; Host now matches
-# strictly (perhaps it should be a glob); port and ip are now put in
-# sessionDict by requestHandler; HTTPConnection's "host" field is now the host
-# header, if any, with the port removed.
-#
-# Revision 1.3  2001/05/03 16:14:58  smullyan
-# modifications for scoping.
-#
-# Revision 1.2  2001/05/01 23:03:39  smullyan
-# added support for name-based virtual hosts.
-#
-# Revision 1.1  2001/04/25 20:18:53  smullyan
-# moved the "experimental" services (web_experimental and
-# templating_experimental) back to web and templating.
-#
-# Revision 1.14  2001/04/23 22:53:55  smullyan
-# added support for keep-alive.  Fixed server name (I had left out "SkunkWeb"
-# and only included the version).
-#
-# Revision 1.13  2001/04/23 21:44:29  smullyan
-# support for "headersOnly" methods and response statuses in web_experimental;
-# mod_skunkweb also now respects its headers_only flag.
-#
-# Revision 1.12  2001/04/23 04:55:48  smullyan
-# cleaned up some older code to use the requestHandler framework; modified
-# all hooks and Protocol methods to take a session dictionary argument;
-# added script to find long lines to util.
-#
-# Revision 1.11  2001/04/20 21:49:53  smullyan
-# first working version of http server, still more rough than diamond.
-#
-# Revision 1.10  2001/04/18 22:46:26  smullyan
-# first gropings towards a web server.
-#
-# Revision 1.9  2001/04/16 17:53:01  smullyan
-# some long lines split; bug in Server.py fixed (reference to deleted
-# Configuration module on reload); logging of multiline messages can now
-# configurably have or not have a log stamp on every line.
-#
-# Revision 1.8  2001/04/10 22:48:29  smullyan
-# some reorganization of the installation, affecting various
-# makefiles/configure targets; modifications to debug system.
-# There were numerous changes, and this is still quite unstable!
-#
-# Revision 1.7  2001/04/04 18:11:36  smullyan
-# KeyedHooks now take glob as keys.  They are tested against job names with
-# fnmatch.fnmatchcase.   The use of '?' is permitted, but discouraged (it is
-# also pointless).  '*' is your friend.
-#
-# Revision 1.6  2001/04/04 14:46:31  smullyan
-# moved KeyedHook into SkunkWeb.Hooks, and modified services to use it.
-#
-# Revision 1.5  2001/04/02 22:31:42  smullyan
-# bug fixes.
-#
-# Revision 1.4  2001/04/02 15:06:39  smullyan
-# fixed some typos.
-#
-# Revision 1.3  2001/04/02 00:02:54  smullyan
-# integration of new hook framework (in requestHandler.hooks) into
-# web_experimental and templating_experimental services.
-#
